# Chronos2-finetunning-server

./: .gitignore  README.md  check_db.py  demo.py  mock_train_data.csv  pyproject.toml  requirements.in  requirements.txt  todo.md  verify_implementation.py  接口文档规范说明.md  推理接口改造todo.md  边端离线推理二进制包改造todo.md
app/: __init__.py  main.py
app/api/: finetune.py  health.py  inference.py  model_info.py  model_publish.py  tools.py  train_jobs.py
app/callbacks/: __init__.py  progress_callback.py
app/cli/: infer_cli.py  infer_node_cli.py
app/core/: auth.py  config.py  enums.py  errors.py  logging_utils.py  paths.py
app/db/: crud.py  init_db.py  models.py  session.py
app/runtime/: zmq_infer_server.py
app/schemas/: request.py  response.py  standard_response.py
app/services/: chunk_inference_service.py  dataset_service.py  inference_service.py  job_service.py  model_metadata_service.py  model_release_service.py  model_service.py  queue_service.py  train_job_adapter.py  trainer_service.py
docs/: backend-architecture.md  edge-offline-cli.md  frontend-api.md  接口文档规范说明.md  推理接口支持片段todo.md  测试用命令.bash  测试用命令.md
scripts/: build_infer_exe.ps1  build_infer_exe.sh  build_infer_node.ps1  build_infer_node.sh
tests/: test_cancel_job.py  test_create_job.py  test_infer_cli.py  test_inference_api.py  test_inference_chunk_api.py  test_inference_runtime_service.py  test_inference_service.py  test_model_info_api.py  test_model_publish_api.py  test_query_api.py  test_train_jobs_spec_compat.py  test_trainer_service.py  test_worker_flow.py  test_zmq_infer_node.py
(+1 files in other folders)
